# tp_laba2

./: CMakeLists.txt  README.md  main  main.cpp
headers/: Note.h  NoteList.h  TextTask.h
sources/: Note.cpp  NoteList.cpp  TextTask.cpp
